tests/NormalTests/paczka1/fuzzy1/17176629.err
Error in line 1: 50HD7 A729 32,4
Error in line 3: 50HD7 A608 34,5
Error in line 11: 50HD7 A729 79,7
Error in line 25: A721 A134 65,4
Error in line 18: 50HD7 A721 4,3
Error in line 35: MxCI4UZIrgH A608 -1,7
Error in line 15: ySMIpp1UVaE A721 17,3
Error in line 32: MxCI4UZIrgH A608 32,6
